--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,47 +21,90 @@ body {
   font-weight: 400;
   color: #333333;
   background-color: #F2F2F2;
+  max-width: 1200px;
 }
+
+/* временное решение */
+.visually-hidden {
+  display: none;
+}
+
+/* header */
 
 .page-header {
   background-color: #FFFFFF;
   color: #000000;
 }
 
+.navigation-list {
+  list-style: none;
+}
+
 .navigation-link {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
-  text-transform: capitalize;
   color: #000000;
   text-decoration: none;
 }
 
+.user-search {
+  display: block;
+  background-image: url("../images/icons/header-search.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 18px;
+  height: 18px;
+}
+
+.user-favorite {
+  display: block;
+  background-image: url("../images/icons/header-heart.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 18px;
+  height: 17px;
+}
+
+.user-favorite-count {
+  font-size: 10px;
+  line-height: 10px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #7DB54F;
+}
 
 .button {
+  font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+
+.button-brown {
   background-color: #756157;
 }
 
+/* main */
+
+.main-index {
+  background-color: #FFFFFF;
+}
+
+/* hero */
 
 .hero {
   width: 100%;
   height: 485px;
-  background-color: #1b0152;
+  background-color: #350909;
   background-image: url("../images/hero-background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-
-
-.reasons {
-  background-color: #FFFFFF;
-}
+/* reasons */
 
 .subtitle {
   font-weight: 700;
@@ -72,23 +115,30 @@ body {
   color: #000000;
 }
 
-.reasons-text {
+.text {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
 }
 
-.reason-item {
-  background-color: rgba(131, 179, 211, 0.12);;
+.reasons-list {
+  list-style: none;
 }
 
-.reason-item:first-child,
-.reason-item:last-child {
+.darkblue-background {
   background-color: #82B3D3;
+}
+
+.darkblue-background .reason-name,
+.darkblue-background .reason-description {
   color: #FFFFFF;
 }
 
-.reason-item:nth-child(3) {
+.lightblue-background {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.blue-background {
   background: rgba(131, 179, 211, 0.2);
 }
 
@@ -105,16 +155,36 @@ body {
   text-align: center;
 }
 
-
-
-.recommendation {
-  background-color: #FFFFFF;
+.reason-img {
+  display: block;
+  width: 800px;
+  height: 385px;
 }
+
+/* recommendation */
 
 .recommendation-text {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+}
+.recommendation-list {
+  list-style: none;
+}
+
+.recommendation-item:first-child {
+  background-image: url("../images/icons/icon-home.svg");
+  background-repeat: no-repeat;
+}
+
+.recommendation-item:nth-child(2) {
+  background-image: url("../images/icons/icon-food.svg");
+  background-repeat: no-repeat;
+}
+
+.recommendation-item:last-child {
+  background-image: url("../images/icons/icon-souvenir.svg");
+  background-repeat: no-repeat;
 }
 
 .recommendation-name {
@@ -130,11 +200,7 @@ body {
   text-align: center;
 }
 
-
-
-.search {
-  background-color: #FFFFFF;
-}
+/* search */
 
 .search-text {
   font-size: 22px;
@@ -147,10 +213,16 @@ body {
   line-height: 36px;
 }
 
+.button-blue {
+  background-color: #82B3D3;
+}
+
+/* subscription */
+
 .subscription {
   width: 100%;
   height: 415px;
-  background-color: #1b0152;
+  background-color: #350909;
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -167,7 +239,6 @@ body {
   text-align: center;
 }
 
-
 .subscription-email {
   font-size: 18px;
   line-height: 24px;
@@ -180,9 +251,10 @@ body {
   background-color: #82B3D3;
 }
 
-.page-footer {
-  background-color: #FFFFFF;
-  color: #000000;
+/* footer */
+
+.social-list {
+  list-style: none;
 }
 
 .footer-phone {
