--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,14 +14,18 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
   color: #333333;
   background-color: #F2F2F2;
-  max-width: 1200px;
 }
 
 /* временное решение */
@@ -29,10 +33,18 @@ body {
   display: none;
 }
 
+.page-wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #FFFFFF;
+}
+
 /* header */
 
 .page-header {
-  background-color: #FFFFFF;
   color: #000000;
 }
 
@@ -83,32 +95,30 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   text-decoration: none;
-}
-
-.button-brown {
   background-color: #756157;
 }
 
 /* main */
 
 .main-index {
-  background-color: #FFFFFF;
+  flex-grow: 1;
 }
 
 /* hero */
 
 .hero {
   width: 100%;
-  height: 485px;
-  background-color: #350909;
+  background-color: #1e227a;
   background-image: url("../images/hero-background.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center bottom;
+  text-align:center;
 }
 
 /* reasons */
 
-.subtitle {
+.title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -128,21 +138,21 @@ body {
   text-align: center;
 }
 
-.darkblue-background {
+.dark-background {
   background-color: #82B3D3;
 }
 
-.darkblue-background .reason-name,
-.darkblue-background .reason-description {
+.dark-background .reason-name,
+.dark-background .reason-description {
   color: #FFFFFF;
 }
 
-.lightblue-background {
+.light-background {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.blue-background {
-  background: rgba(131, 179, 211, 0.2);
+.middle-background {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .reason-name {
@@ -167,6 +177,7 @@ body {
   text-align: center;
 }
 .recommendation-list {
+  display: flex;
   list-style: none;
 }
 
@@ -200,10 +211,13 @@ body {
 
 /* search */
 
+.search {
+  text-align: center;
+}
+
 .search-text {
   font-size: 22px;
   line-height: 26px;
-  text-align: center;
 }
 
 .search-button {
@@ -211,7 +225,7 @@ body {
   line-height: 36px;
 }
 
-.button-blue {
+.button-dark {
   background-color: #82B3D3;
 }
 
@@ -219,15 +233,15 @@ body {
 
 .subscription {
   width: 100%;
-  height: 415px;
-  background-color: #350909;
+  background-color: #1e227a;
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   color: #FFFFFF;
+  text-align: center;
 }
 
-.subscription-subtitle {
+.subscription-title {
   color: #FFFFFF;
 }
 
@@ -251,8 +265,9 @@ body {
 
 /* footer */
 
-.page-footer{
-background-color: #FFFFFF;
+.page-footer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .social-list {
@@ -270,9 +285,6 @@ background-color: #FFFFFF;
 
 
 /* Каталог */
-.main-catalog {
-  background-color: #FFFFFF;
-}
 
 .catalog-title {
   font-weight: 700;
@@ -289,12 +301,17 @@ background-color: #FFFFFF;
 }
 
 /* catalog-filter */
+
 .filter-wrapper {
-  background-color: #350909;
+  background-color: #1e227a;
   background-image: url("../images/catalog-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: #FFFFFF;
+}
+
+.catalog-filter-form {
+  display: flex;
 }
 
 .catalog-filter-title {
@@ -322,12 +339,14 @@ background-color: #FFFFFF;
 
 /* hotels */
 
-.hotels-subtitle {
+.hotels-title {
   text-align: left;
 }
 
 .hotels-list {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .hotel-link {
@@ -341,7 +360,7 @@ background-color: #FFFFFF;
   line-height: 28px;
 }
 
-.button-green {
+.button-favorite {
   background-color: #7DB54F;
 }
 
@@ -375,6 +394,7 @@ background-color: #FFFFFF;
 
 .pagination {
   list-style: none;
+  display: flex;
 }
 
 .pagination-link {
@@ -397,4 +417,8 @@ background-color: #FFFFFF;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+}
+
+.catalog-subscription {
+  text-align: center;
 }
