--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -14,14 +14,19 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
+  margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
   color: #333333;
   background-color: #F2F2F2;
-  max-width: 1200px;
 }
 
 /* временное решение */
@@ -29,15 +34,41 @@ body {
   display: none;
 }
 
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+}
+
 /* header */
 
 .page-header {
-  background-color: #FFFFFF;
   color: #000000;
+  height: 64px;
+}
+
+.navigation {
+  display: flex;
+  margin: 0 70px;
+  align-items: center;
+}
+
+.navigation-logo {
+  width: 140px;
+  height: 70px;
+  z-index: 5;
 }
 
 .navigation-list {
+  width: 340px;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .navigation-link {
@@ -46,6 +77,11 @@ body {
   font-weight: 700;
   color: #000000;
   text-decoration: none;
+}
+
+.navigation-user {
+  max-width: 268px;
+  margin-left: auto;
 }
 
 .user-search {
@@ -75,6 +111,7 @@ body {
 }
 
 .button {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -82,32 +119,32 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   text-decoration: none;
-}
-
-.button-brown {
   background-color: #756157;
 }
 
 /* main */
 
-.main-index {
-  background-color: #FFFFFF;
+.main-container {
+  flex-grow: 1;
 }
 
 /* hero */
 
 .hero {
   width: 100%;
-  height: 485px;
-  background-color: #350909;
+  background-color: #1e227a;
   background-image: url("../images/hero-background.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center bottom;
+  text-align:center;
+  padding-top: 51px;
+  padding-bottom: 82px;
 }
 
 /* reasons */
 
-.subtitle {
+.title {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -124,40 +161,47 @@ body {
 
 .reasons-list {
   list-style: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.darkblue-background {
+.reason-item {
+  width: 400px;
+  padding: 103px 85px;
+  box-sizing: border-box;
+}
+
+.dark-background {
   background-color: #82B3D3;
+  width: 1200px;
 }
 
-.darkblue-background .reason-name,
-.darkblue-background .reason-description {
+.dark-background .reason-name,
+.dark-background .reason-description {
   color: #FFFFFF;
 }
 
-.lightblue-background {
+.light-background {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.blue-background {
-  background: rgba(131, 179, 211, 0.2);
+.middle-background {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .reason-name {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
-  text-align: center;
   text-transform: uppercase;
   color: #000000;
 }
 
-.reason-description {
-  text-align: center;
-}
-
 .reason-img {
-  display: block;
+  vertical-align: middle;
   width: 800px;
   height: 385px;
 }
@@ -170,22 +214,34 @@ body {
   text-align: center;
 }
 .recommendation-list {
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.recommendation-item {
+  width: 400px;
+  padding: 80px 85px;
+  box-sizing: border-box;
 }
 
 .recommendation-item:first-child {
   background-image: url("../images/icons/icon-home.svg");
   background-repeat: no-repeat;
+  background-position: center top;
 }
 
 .recommendation-item:nth-child(2) {
   background-image: url("../images/icons/icon-food.svg");
   background-repeat: no-repeat;
+  background-position: center top;
 }
 
 .recommendation-item:last-child {
   background-image: url("../images/icons/icon-souvenir.svg");
   background-repeat: no-repeat;
+  background-position: center top;
 }
 
 .recommendation-name {
@@ -203,10 +259,13 @@ body {
 
 /* search */
 
+.search {
+  text-align: center;
+}
+
 .search-text {
   font-size: 22px;
   line-height: 26px;
-  text-align: center;
 }
 
 .search-button {
@@ -214,7 +273,7 @@ body {
   line-height: 36px;
 }
 
-.button-blue {
+.button-dark {
   background-color: #82B3D3;
 }
 
@@ -222,15 +281,15 @@ body {
 
 .subscription {
   width: 100%;
-  height: 415px;
-  background-color: #350909;
+  background-color: #1e227a;
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   color: #FFFFFF;
+  text-align: center;
 }
 
-.subscription-subtitle {
+.subscription-title {
   color: #FFFFFF;
 }
 
@@ -254,12 +313,16 @@ body {
 
 /* footer */
 
-.page-footer{
-background-color: #FFFFFF;
+.page-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 70px;
 }
 
 .social-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-phone {
@@ -273,22 +336,13 @@ background-color: #FFFFFF;
 
 
 /* Каталог */
-.main-catalog {
-  background-color: #FFFFFF;
-}
-
-.catalog-header {
-  background-color: #350909;
-  background-image: url("../images/catalog-background.jpg");
-  background-repeat: no-repeat;
-  height: 412px;
-}
 
 .catalog-title {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   color: #FFFFFF;
+  margin: 0;
 }
 
 .breadcrumbs {
@@ -296,13 +350,22 @@ background-color: #FFFFFF;
   font-size: 16px;
   line-height: 21px;
   color: #FFFFFF;
+  margin: 0;
+  padding: 0;
 }
 
 /* catalog-filter */
 
-.catalog-filter {
-  background-color: #350909;
+.filter-wrapper {
+  background-color: #1e227a;
+  background-image: url("../images/catalog-background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #FFFFFF;
+}
+
+.catalog-filter-form {
+  display: flex;
 }
 
 .catalog-filter-title {
@@ -313,6 +376,8 @@ background-color: #FFFFFF;
 
 .catalog-filter-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .catalog-filter-item {
@@ -330,12 +395,25 @@ background-color: #FFFFFF;
 
 /* hotels */
 
-.hotels-subtitle {
+.hotels {
+  margin: 0 70px;
+}
+
+.hotels-title {
   text-align: left;
 }
 
 .hotels-list {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+}
+
+.hotel-card {
+  padding: 20px;
 }
 
 .hotel-link {
@@ -349,7 +427,7 @@ background-color: #FFFFFF;
   line-height: 28px;
 }
 
-.button-green {
+.button-favorite {
   background-color: #7DB54F;
 }
 
@@ -383,6 +461,9 @@ background-color: #FFFFFF;
 
 .pagination {
   list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .pagination-link {
@@ -405,4 +486,8 @@ background-color: #FFFFFF;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+}
+
+.catalog-subscription {
+  text-align: center;
 }
