разметка крупных блоков

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,7 @@ body {
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  margin-right: auto;
 }
 
 .navigation-link {
@@ -82,7 +83,7 @@ body {
 
 .navigation-user {
   max-width: 268px;
-  margin-left: auto;
+  margin-right: 0;
 }
 
 .user-search {
@@ -152,12 +153,14 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
 }
 
 .text {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  margin: 0;
 }
 
 .reasons-list {
@@ -200,6 +203,11 @@ body {
   line-height: 28px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
+}
+
+.reason-description {
+  margin: 0;
 }
 
 .reason-img {
@@ -253,10 +261,12 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
 }
 
 .recommendation-description {
   text-align: center;
+  margin: 0;
 }
 
 /* search */
@@ -427,7 +437,20 @@ body {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin: 0;
 }
+
+/* Тестовые обертки в карточке товара
+
+.hotel-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.hotel-wrapper p {
+  margin: 0;
+} */
 
 .button-favorite {
   background-color: #7DB54F;
