--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -29,9 +29,15 @@ body {
   background-color: #F2F2F2;
 }
 
-/* временное решение */
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .page-wrapper {
@@ -41,6 +47,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   background-color: #FFFFFF;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 /* header */
@@ -52,22 +59,23 @@ body {
 
 .navigation {
   display: flex;
-  margin: 0 70px;
+  margin: 0 auto;
+  width: 1060px;
   align-items: center;
 }
 
 .navigation-logo {
+  margin-right: 28px;
+  margin-bottom: -6px;
   width: 140px;
   height: 70px;
   z-index: 5;
-  margin-right: 28px;
 }
 
 .navigation-list {
-  width: 340px;
+  width: 450px;
   list-style: none;
   display: flex;
-  justify-content: space-between;
   margin: 0;
   padding: 0;
   margin-right: auto;
@@ -82,8 +90,7 @@ body {
 }
 
 .navigation-user {
-  max-width: 268px;
-  margin-right: 0;
+  max-width: 308px;
 }
 
 .user-search {
@@ -112,18 +119,6 @@ body {
   background-color: #7DB54F;
 }
 
-.button {
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  text-decoration: none;
-  background-color: #756157;
-}
-
 /* main */
 
 .main-container {
@@ -142,6 +137,7 @@ body {
   text-align:center;
   padding-top: 51px;
   padding-bottom: 82px;
+  margin-bottom: 69px;
 }
 
 /* reasons */
@@ -163,6 +159,20 @@ body {
   margin: 0;
 }
 
+.reasons {
+  margin-bottom: 64px;
+}
+
+.reasons-title {
+  margin: 0 auto;
+  margin-bottom: 25px;
+  max-width: 620px;
+}
+
+.reasons-text {
+  margin-bottom: 69px;
+}
+
 .reasons-list {
   list-style: none;
   text-align: center;
@@ -174,55 +184,56 @@ body {
 
 .reason-item {
   width: 400px;
-  padding: 103px 85px;
+  padding: 112px 85px;
   box-sizing: border-box;
 }
 
-.dark-background {
-  background-color: #82B3D3;
-  width: 1200px;
-  padding: 0;
-}
-
-.dark-background .reason-name,
-.dark-background .reason-description {
-  color: #FFFFFF;
-}
-
-.light-background {
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
-.middle-background {
-  background-color: rgba(131, 179, 211, 0.2);
+.reason-item-wrapper {
+  width: 400px;
+  padding: 102px 85px;
 }
 
 .reason-name {
+  max-width: 175px;
+  margin: 0 auto;
+  margin-bottom: 62px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
   color: #000000;
-  margin: 0;
 }
 
 .reason-description {
   margin: 0;
+  max-width: 230px;
 }
 
 .reason-img {
-  vertical-align: middle;
+  display: block;
   width: 800px;
   height: 385px;
 }
 
 /* recommendation */
 
+.recommendation {
+  margin-bottom: 96px;
+}
+
+.recommendation-title {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  max-width: 505px;
+}
+
 .recommendation-text {
+  margin-bottom: 64px;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
 }
+
 .recommendation-list {
   display: flex;
   list-style: none;
@@ -232,66 +243,67 @@ body {
 
 .recommendation-item {
   width: 400px;
-  padding: 80px 85px;
+  padding: 183px 85px 81px;
   box-sizing: border-box;
 }
 
 .recommendation-item:first-child {
   background-image: url("../images/icons/icon-home.svg");
   background-repeat: no-repeat;
-  background-position: center top;
-}
+  background-position: center top 80px;}
 
 .recommendation-item:nth-child(2) {
   background-image: url("../images/icons/icon-food.svg");
   background-repeat: no-repeat;
-  background-position: center top;
-}
+  background-position: center top 80px;}
 
 .recommendation-item:last-child {
   background-image: url("../images/icons/icon-souvenir.svg");
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center top 80px;
 }
 
 .recommendation-name {
+  margin: 0;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
-  margin: 0;
 }
 
 .recommendation-description {
   text-align: center;
   margin: 0;
+  max-width: 230px;
 }
 
 /* search */
 
 .search {
   text-align: center;
+  margin-bottom: 96px;
+}
+.search-title {
+  margin-bottom: 20px;
 }
 
 .search-text {
+  margin: 0 auto;
+  margin-bottom: 54px;
+  max-width: 592px;
   font-size: 22px;
   line-height: 26px;
-}
-
-.search-button {
-  font-size: 20px;
-  line-height: 36px;
-}
-
-.button-dark {
-  background-color: #82B3D3;
 }
 
 /* subscription */
 
 .subscription {
+  margin-bottom: 45px;
+  padding-top: 96px;
+  padding-bottom: 104px;
   width: 100%;
   background-color: #1e227a;
   background-image: url("../images/subscribe-background.jpg");
@@ -303,35 +315,44 @@ body {
 
 .subscription-title {
   color: #FFFFFF;
+  margin-bottom: 20px;
 }
 
 .subscription-text {
+  margin: 0 auto;
+  margin-bottom: 54px;
+  max-width: 475px;
   font-size: 22px;
   line-height: 26px;
-  text-align: center;
+}
+
+.subscription-form {
+  display: flex;
+  justify-content: center;
 }
 
 .subscription-email {
+  font-family: inherit;
+  font-size: 18px;
   line-height: 24px;
   color: #000000;
   background-color: #F2F2F2;
 }
 
-.subscription-button {
-  font-size: 20px;
-  line-height: 36px;
-  background-color: #82B3D3;
-}
 
 /* footer */
 
 .page-footer {
   display: flex;
   justify-content: space-between;
-  margin: 0 70px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  width: 1060px;
+  align-items: center;
 }
 
 .social-list {
+  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -350,11 +371,12 @@ body {
 /* Каталог */
 
 .catalog-title {
+  margin: 0;
+  margin-bottom: 8px;
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   color: #FFFFFF;
-  margin: 0;
 }
 
 .breadcrumbs {
@@ -364,6 +386,7 @@ body {
   color: #FFFFFF;
   margin: 0;
   padding: 0;
+  margin-bottom: 40px;
 }
 
 /* catalog-filter */
@@ -374,13 +397,23 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #FFFFFF;
+  padding: 35px 70px 73px;
+  margin-bottom: 50px;
 }
 
 .catalog-filter-form {
   display: flex;
+  justify-content: space-between;
+}
+
+.catalog-filter-group {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 .catalog-filter-title {
+  margin-bottom: 32px;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -394,25 +427,78 @@ body {
 
 .catalog-filter-item {
   line-height: 23px;
+  margin-bottom: 16px;
+}
+
+.catalog-filter-item:last-child {
+  margin-bottom: 0;
 }
 
 .catalog-filter-input {
+  font-family: inherit;
   font-weight: 700;
+  font-size: 18px;
   line-height: 24px;
   color: #000000;
-}
-.button-transparent {
-  background-color: transparent;
 }
 
 /* hotels */
 
 .hotels {
-  margin: 0 70px;
+  width: 1060px;
+  margin: 0 auto;
+  margin-bottom: 96px;
+}
+
+.sort-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .hotels-title {
-  text-align: left;
+  align-self: center;
+}
+
+.select-control {
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333333;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.hotels-view-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 160px;
+}
+
+.hotels-view {
+  width: 48px;
+  height: 48px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.hotels-view:first-child {
+  background-image: url("../images/icons/view-tile.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.hotels-view:nth-child(2) {
+  background-image: url("../images/icons/view-slideshow.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.hotels-view:last-child {
+  background-image: url("../images/icons/view-list.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .hotels-list {
@@ -422,10 +508,18 @@ body {
   margin: 0;
   padding: 0;
   gap: 20px;
+  box-sizing: border-box;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #E6E6E6;
+  margin-bottom: 40px;
 }
 
 .hotel-card {
+  width: 340px;
   padding: 20px;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .hotel-link {
@@ -451,10 +545,6 @@ body {
 .hotel-wrapper p {
   margin: 0;
 } */
-
-.button-favorite {
-  background-color: #7DB54F;
-}
 
 .hotel-stars {
   background-image: url("../images/icons/hotel-stars.svg");
@@ -485,19 +575,29 @@ body {
 /* pagination */
 
 .pagination {
+  width: 400px;
   list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
+  gap: 8px;
+  margin-bottom: 60px;
 }
 
 .pagination-link {
+  display: block;
+  width: 60px;
+  height: 60px;
+  padding: 14px;
+  text-align: center;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
   text-decoration: none;
   color: #FFFFFF;
   background-color: #82B3D3;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .pagination-current {
@@ -515,4 +615,70 @@ body {
 
 .catalog-subscription {
   text-align: center;
+  padding-bottom: 104px;
+  margin-bottom: 48px;
+}
+
+.catalog-subscription-title {
+  margin-bottom: 20px;
+}
+
+/* Buttons and backgrounds */
+
+.button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  text-decoration: none;
+  background-color: #756157;
+  border-radius: 4px;
+  border: none;
+}
+
+.search-button {
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.subscription-button {
+  font-size: 20px;
+  line-height: 36px;
+  border-radius: 0 4px 4px 0;
+}
+
+.button-dark {
+  background-color: #82B3D3;
+}
+
+.button-transparent {
+  background-color: transparent;
+}
+
+.button-favorite {
+  background-color: #7DB54F;
+}
+
+.dark-background {
+  display: flex;
+  align-items: center;
+  background-color: #82B3D3;
+  width: 1200px;
+  padding: 0;
+}
+
+.dark-background .reason-name,
+.dark-background .reason-description {
+  color: #FFFFFF;
+}
+
+.light-background {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.middle-background {
+  background-color: rgba(131, 179, 211, 0.2);
 }
