--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ body {
 }
 
 .navigation-logo {
-  margin-right: 28px;
+  margin-right: 30px;
   margin-bottom: -6px;
   width: 140px;
   height: 70px;
@@ -72,15 +72,18 @@ body {
 }
 
 .navigation-list {
-  width: 450px;
+  min-width: 340px;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  margin-right: auto;
+  align-items: center;
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -89,11 +92,13 @@ body {
 }
 
 .navigation-user {
-  max-width: 308px;
+  min-width: 268px;
+  margin-left: auto;
+  justify-content: flex-end;
 }
 
 .user-search {
-  display: block;
+  padding: 22px 12px;
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -102,7 +107,7 @@ body {
 }
 
 .user-favorite {
-  display: block;
+  padding: 22px 12px;
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -614,6 +619,7 @@ body {
 /* Buttons and backgrounds */
 
 .button {
+  padding: 8px 34px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -625,6 +631,12 @@ body {
   background-color: #756157;
   border-radius: 4px;
   border: none;
+  cursor: pointer;
+}
+
+.navigation-item .button {
+    margin-left: 20px;
+
 }
 
 .search-button {
