--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -54,7 +54,6 @@ body {
 
 .page-header {
   color: #000000;
-  height: 64px;
 }
 
 .navigation {
@@ -65,7 +64,7 @@ body {
 }
 
 .navigation-logo {
-  margin-right: 28px;
+  margin-right: 30px;
   margin-bottom: -6px;
   width: 140px;
   height: 70px;
@@ -73,15 +72,18 @@ body {
 }
 
 .navigation-list {
-  width: 450px;
+  min-width: 340px;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  margin-right: auto;
+  align-items: center;
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -90,11 +92,13 @@ body {
 }
 
 .navigation-user {
-  max-width: 308px;
+  min-width: 268px;
+  margin-left: auto;
+  justify-content: flex-end;
 }
 
 .user-search {
-  display: block;
+  padding: 22px 12px;
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -103,7 +107,7 @@ body {
 }
 
 .user-favorite {
-  display: block;
+  padding: 22px 12px;
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -143,13 +147,13 @@ body {
 /* reasons */
 
 .title {
+  margin: 0 auto;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
-  margin: 0;
 }
 
 .text {
@@ -164,7 +168,6 @@ body {
 }
 
 .reasons-title {
-  margin: 0 auto;
   margin-bottom: 25px;
   max-width: 620px;
 }
@@ -206,7 +209,6 @@ body {
 
 .reason-description {
   margin: 0;
-  max-width: 230px;
 }
 
 .reason-img {
@@ -217,12 +219,7 @@ body {
 
 /* recommendation */
 
-.recommendation {
-  margin-bottom: 96px;
-}
-
 .recommendation-title {
-  margin: 0 auto;
   margin-bottom: 20px;
   max-width: 505px;
 }
@@ -284,8 +281,9 @@ body {
 
 .search {
   text-align: center;
-  margin-bottom: 96px;
+  padding: 96px 300px;
 }
+
 .search-title {
   margin-bottom: 20px;
 }
@@ -293,7 +291,6 @@ body {
 .search-text {
   margin: 0 auto;
   margin-bottom: 54px;
-  max-width: 592px;
   font-size: 22px;
   line-height: 26px;
 }
@@ -301,10 +298,7 @@ body {
 /* subscription */
 
 .subscription {
-  margin-bottom: 45px;
-  padding-top: 96px;
-  padding-bottom: 104px;
-  width: 100%;
+  padding: 96px 258px 104px;
   background-color: #1e227a;
   background-image: url("../images/subscribe-background.jpg");
   background-repeat: no-repeat;
@@ -343,10 +337,11 @@ body {
 /* footer */
 
 .page-footer {
+  padding-top: 45px;
+  padding-bottom: 35px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  margin-bottom: 35px;
   width: 1060px;
   align-items: center;
 }
@@ -445,9 +440,7 @@ body {
 /* hotels */
 
 .hotels {
-  width: 1060px;
-  margin: 0 auto;
-  margin-bottom: 96px;
+  padding: 0 70px;
 }
 
 .sort-wrapper {
@@ -457,6 +450,7 @@ body {
 }
 
 .hotels-title {
+  margin: 0;
   align-self: center;
 }
 
@@ -614,9 +608,8 @@ body {
 }
 
 .catalog-subscription {
+  padding: 96px 258px 104px;
   text-align: center;
-  padding-bottom: 104px;
-  margin-bottom: 48px;
 }
 
 .catalog-subscription-title {
@@ -626,6 +619,7 @@ body {
 /* Buttons and backgrounds */
 
 .button {
+  padding: 8px 34px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -637,6 +631,12 @@ body {
   background-color: #756157;
   border-radius: 4px;
   border: none;
+  cursor: pointer;
+}
+
+.navigation-item .button {
+    margin-left: 20px;
+
 }
 
 .search-button {
