--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,7 +192,7 @@ body {
 }
 
 .reason-item-wrapper {
-  width: 400px;
+  max-width: 400px;
   padding: 102px 85px;
   box-sizing: border-box;
 }
@@ -214,8 +214,10 @@ body {
 
 .reason-img {
   display: block;
-  width: 800px;
-  height: 385px;
+  /* width: 800px;
+  height: 385px; */
+  max-width: 100%;
+  height: auto;
 }
 
 /* recommendation */
@@ -376,13 +378,22 @@ body {
 }
 
 .breadcrumbs {
+  display: flex;
   list-style: none;
   font-size: 16px;
   line-height: 21px;
-  color: #FFFFFF;
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
+}
+
+.breadcrumbs-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.breadcrumbs-link {
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 /* catalog-filter */
