--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,7 +73,6 @@ body {
   margin: 0 auto;
 }
 
-
 /* Header */
 
 .page-header {
@@ -96,10 +95,10 @@ body {
 }
 
 .navigation-list {
-  min-width: 340px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  max-width: 460px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -117,7 +116,7 @@ body {
 }
 
 .navigation-user {
-  min-width: 268px;
+  max-width: 430px;
   margin-left: auto;
   justify-content: flex-end;
 }
@@ -127,8 +126,8 @@ body {
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  width: 18px;
-  height: 18px;
+  min-width: 18px;
+  min-height: 18px;
 }
 
 .user-favorite {
@@ -136,8 +135,8 @@ body {
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center center;
-  width: 18px;
-  height: 17px;
+  min-width: 18px;
+  min-height: 17px;
 }
 
 .user-favorite-count {
@@ -269,7 +268,7 @@ body {
 }
 
 .recommendation-name {
-  margin: 0;
+  margin-top: 0;
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 24px;
@@ -357,7 +356,7 @@ body {
 }
 
 .social-list {
-  min-width: 142px;
+  max-width: 150px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -367,7 +366,8 @@ body {
 }
 
 .social-link {
-  padding: 10px;
+  display: block;
+  padding: 12px;
   width: 47px;
   height: 47px;
   box-sizing: border-box;
@@ -381,7 +381,6 @@ body {
   color: #000000;
   text-decoration: none;
 }
-
 
 /* Catalog */
 
@@ -595,7 +594,8 @@ body {
   box-sizing: border-box;
   padding-bottom: 40px;
   border-bottom: 1px solid #E6E6E6;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
+
 }
 
 .hotel-card {
@@ -666,7 +666,7 @@ body {
   text-transform: uppercase;
   padding: 9px 22px;
   background: #F2F2F2;
-border-radius: 4px;
+  border-radius: 4px;
 }
 
 /* Pagination */
@@ -677,12 +677,16 @@ border-radius: 4px;
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 8px;
   margin-bottom: 60px;
+}
+
+.pagination-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .pagination-link {
   display: block;
+  box-sizing: border-box;
   width: 60px;
   height: 60px;
   padding: 14px;
@@ -694,7 +698,6 @@ border-radius: 4px;
   color: #FFFFFF;
   background-color: #82B3D3;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 .pagination-current {
